# SpaceShooterX

./: CMakeLists.txt  README.md
SpaceShooterX/: CMakeLists.txt
SpaceShooterX/src/: animated_object.cpp  animated_object.h  audio_player.cpp  audio_player.h  base_console.cpp  base_console.h  common.cpp  common.h  enemy.cpp  enemy.h  game.cpp  game.h  game_object.cpp  game_object.h  game_ui.cpp  game_ui.h  main.cpp  particle_system.cpp  particle_system.h  player.cpp  player.h  projectile.cpp  projectile.h  random_extension.h  repair_pack.cpp  repair_pack.h  spaceship.cpp  spaceship.h
SpaceShooterX/src/math/: math.h  rect.h  vector_2.cpp  vector_2.h  vector_2f.cpp  vector_2f.h  vector_2i.cpp  vector_2i.h
